<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="@dimen/distance_8dp">

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:gravity="center"
              android:id="@+id/productselect_welcome"
              android:text="@string/productselect_welcome"
              style="@style/Title"
              android:textSize="@dimen/font_size_medium"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/productselect_message"
              app:layout_constraintVertical_chainStyle="packed"/>

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:id="@+id/productselect_message"
              android:gravity="center"
              style="@style/Content"
              android:layout_marginTop="@dimen/distance_8dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/productselect_welcome"
              app:layout_constraintBottom_toTopOf="@+id/productselect_vertical_center"
              android:text="@string/productselect_message"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/productselect_vertical_center"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>

    <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
             android:id="@+id/productselect_spinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productselect_vertical_center"
             app:layout_constraintVertical_chainStyle="packed"/>

    <Button android:layout_width="0dp" android:layout_height="wrap_content"
            android:id="@+id/productselect_button"
            style="@style/PrimaryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/productselect_show_details"
            app:layout_constraintTop_toBottomOf="@+id/productselect_spinner" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>